# TEXTMASTERAI

./: .gitignore  CMakeLists.txt  README.md  bldTxt.bat  build_llama.bat  build_textmaster.bat  build_windows.bat  copy_qt_dlls.bat  copy_qt_plugins.bat  copy_vcruntime.bat  index.html  resources.qrc  run_app.bat  test_long_text.py  test_nlp.py  test_study_material.py  windows_package.py
forms/: enumerationspage.ui  flashcardspage.ui  historypage.ui  homepage.ui  loadingpage.ui  mainwindow.ui  quizpage.ui  resultspage.ui
resources/: nlp_processor.py  resources.qrc
resources/styles/: enumerations.qss  flashcards.qss  history.qss  home.qss  main.qss  results.qss
src/: TextMaster.ui  enumerations_page.cpp  enumerations_page.h  enumerationspage.h  flashcards_page.cpp  flashcards_page.h  flashcardspage.h  home_page.cpp  home_page.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  llm_processor.cpp  llm_processor.h  main.cpp  mainwindow.cpp  mainwindow.h  quiz_page.cpp  quiz_page.h  quizpage.h  text_processor.cpp  text_processor.h
src/pages/: results_page.cpp  results_page.h
src/resources/: nlp_processor old.py  nlp_processor.py
